syntax = "proto3";

package rate_api;

service RateService {
  rpc GetRatePlan(GetRatePlanRequest) returns (GetRatePlanResponse);
}

message GetRatePlanRequest {
  int64 favorite = 1;
  int64 req_num = 2;
}

message GetRatePlanResponse {
  repeated string hotel_ids = 1;
}

message HotelInfo {
  string id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
  int64 provide = 5;
}
